@@ -3,6 +3,9 @@
 
 mm-dd-10 - Version 5.1.14
 
+   - Testsuite.simple, ConenctionTest & DataSourceTest are up to date. Major rework on 
+     ConnectionTest.testDeadlockDetection and testUseCompress.
+   
    - Testsuite.simple, CallableStatementTest & CharsetTests are up to date.
    
    - Testsuite.regression SubqueriesRegressionTest and StringRegressionTest are up to date.
